--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -6,6 +6,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  z-index: 10;
   transition: opacity var(--main-duration) var(--timing-function),
     visibility var(--main-duration) var(--timing-function);
 }
