--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,6 +2,14 @@
   padding-top: 16px;
   padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
+  @media screen and (max-width: 768px) {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 4;
+    background-color: #fff;
+  }
 }
 .header-container {
   display: flex;
